Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
           <h3>
 <a id="gulp-ui是什么" class="anchor" href="#gulp-ui%E6%98%AF%E4%BB%80%E4%B9%88" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gulp UI是什么？</h3>
 
-<p>Gulp UI实际上是一套完整的gulp工作流，以nw.js（node-webkit）为基础将gulpfile.js以及所依赖的node_modules封装在一起的一个图形界面。</p>
+<p>Gulp UI实际上是一套完整的gulp工作流，以nw.js（node-webkit）为基础将gulpfile.js以及所依赖的node_modules封装在一起的一个图形界面。
+<img src="https://github.com/whatifhappen/gulpUI-WX.github.io/blob/gh-pages/images/gulp-ui.png?raw=true" alt=""></p>
 
 <h3>
 <a id="为什么要做ui" class="anchor" href="#%E4%B8%BA%E4%BB%80%E4%B9%88%E8%A6%81%E5%81%9Aui" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>为什么要做UI？</h3>
@@ -49,7 +50,7 @@
 <li>css前缀自动补全</li>
 <li>格式化html，并自动替换src源码路径为idc发布路径</li>
 <li>压缩图片(png|jpg|gif|svg)</li>
-<li>压缩或格式化js，并自动替换src源码路径为idc发布路径</li>
+<li>压缩或格式化js，并自动替换src源码路径为dist发布路径</li>
 <li>同步刷新浏览器browserSync</li>
 </ol>
 
@@ -68,7 +69,7 @@
 <pre><code>  ├── 主目录 
   │ ├── src //源码路径 
   │ ├── dev //开发阶段编译路径 
-  │ └── idc //压缩编译的发布目录
+  │ └── dist //压缩编译的发布目录
 </code></pre>
 
 <p>​</p>
