Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 <p>gulp工作流在实际使用中根据项目需求变得越来越复杂，依赖的node_modules变多，需要使用更多的命令来处理不同的需求，灵活性较低。随着项目文件的增加导致操作时间也增加，使用成本变高。使用UI，可以降低团队成员使用成本，快速上手和开发项目。 </p>
 
 <h3>
+<a id="下载地址" class="anchor" href="#%E4%B8%8B%E8%BD%BD%E5%9C%B0%E5%9D%80" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>下载地址</h3>
+
+<ul>
+<li>windows: <a href="https://github.com/whatifhappen/gulpUI-WX.github.io/blob/gh-pages/source/gulp-setup-WX-v0.0.2.exe.7z">windows版</a>
+</li>
+<li>mac：稍后更新</li>
+</ul>
+
+<h3>
 <a id="功能介绍" class="anchor" href="#%E5%8A%9F%E8%83%BD%E4%BB%8B%E7%BB%8D" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>功能介绍</h3>
 
 <h4>
