--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a id="下载地址" class="anchor" href="#%E4%B8%8B%E8%BD%BD%E5%9C%B0%E5%9D%80" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>下载地址</h3>
 
 <ul>
-<li>windows: <a href="https://github.com/whatifhappen/GulpUI-WX/blob/gh-pages/source/gulp-setup-WX-v0.0.2.exe.7z?raw=true">windows版</a>
+<li>windows: <a href="https://raw.githubusercontent.com/whatifhappen/GulpUI-WX/gh-pages/source/gulp-setup-WX-v0.0.2.exe.7z">windows版</a>
 </li>
 <li>mac：稍后更新</li>
 </ul>
@@ -133,8 +133,6 @@
 
 <h3>
 <a id="期待你的反馈和建议" class="anchor" href="#%E6%9C%9F%E5%BE%85%E4%BD%A0%E7%9A%84%E5%8F%8D%E9%A6%88%E5%92%8C%E5%BB%BA%E8%AE%AE" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>期待你的反馈和建议</h3>
-
-<p><a href="rongteng@tencent.com">e-mail</a></p>
         </section>
 
         <aside id="sidebar">
