Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 <h3>
 <a id="使用说明" class="anchor" href="#%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>使用说明：</h3>
 
+<p><img src="https://github.com/whatifhappen/GulpUI-WX/blob/gh-pages/images/gulp-workflow-demo.gif?raw=true" alt="demo"></p>
+
 <ul>
 <li><p><strong>拖放</strong>或者 <strong>点击</strong>选择src源码文件夹，源码路径以src文件夹为起点开始操作；（若无src目录，则会创建一个dist目录存放编译后的文件）</p></li>
 <li><p>当点击 <strong>开发</strong>，会启动 <a href="http://www.browsersync.io/">browserSync</a>（前端测试刷新工具，更多介绍查看km:  <a href="http://www.browsersync.io/">http://www.browsersync.io/</a>）静态服务器。监听less文件，并自动编译，补全前缀到dev目录；编译src下所有less，压缩css，补全前缀，并替换src路径为idc;监听html文件，自动替换路径地址为dev目录;监听图片文件，修改时自动刷新浏览器;</p></li>
