--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
           <h3>
 <a id="gulp-ui是什么" class="anchor" href="#gulp-ui%E6%98%AF%E4%BB%80%E4%B9%88" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gulp UI是什么？</h3>
 
-<p>Gulp UI实际上是一套完整的gulp工作流，以nw.js（node-webkit）为基础将gulpfile.js以及所依赖的node_modules封装在一起的一个图形界面。
-<img src="https://github.com/whatifhappen/gulpUI-WX.github.io/blob/gh-pages/images/gulp-ui.png?raw=true" alt=""></p>
+<p>Gulp UI实际上是一套完整的gulp工作流，以nw.js（node-webkit）为基础将gulpfile.js以及所依赖的node_modules封装在一起的一个图形界面。</p>
+
+<p><img src="https://github.com/whatifhappen/gulpUI-WX.github.io/blob/gh-pages/images/gulp-ui.png?raw=true" alt=""></p>
 
 <h3>
 <a id="为什么要做ui" class="anchor" href="#%E4%B8%BA%E4%BB%80%E4%B9%88%E8%A6%81%E5%81%9Aui" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>为什么要做UI？</h3>
