Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 <a id="下载地址" class="anchor" href="#%E4%B8%8B%E8%BD%BD%E5%9C%B0%E5%9D%80" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>下载地址</h3>
 
 <ul>
-<li>windows: <a href="https://raw.githubusercontent.com/whatifhappen/GulpUI-WX/gh-pages/source/gulp-setup-WX-v0.0.2.exe.7z">windows版</a>
+<li>windows: <a href="https://raw.githubusercontent.com/whatifhappen/GulpUI-WX/gh-pages/source/gulp-setup-WX-v0.0.2.exe.7z">gulp-setup-WX-v0.0.2.exe</a>
 </li>
-<li>mac：稍后更新</li>
+<li>mac：<a href="https://raw.githubusercontent.com/whatifhappen/GulpUI-WX/gh-pages/source/Gulp.dmg">Gulp.app</a>
+</li>
 </ul>
 
 <h3>
